overflow fixed

--- a/src/index.css
+++ b/src/index.css
@@ -83,6 +83,7 @@ body {
 
 ::-webkit-scrollbar {
   width: 5px;
+  height: 5px;
 }
 
 /* Track */
